<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.SearchShopActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/topbar_background"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_return_search"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/ic_zuo_24dp" />

            <EditText
                android:id="@+id/edit_search_serach"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/search_content"
                android:imeOptions="actionSearch"
                android:maxLength="50"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite" />

            <Button
                android:id="@+id/btn_search_search"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="10dp"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:background="@drawable/search_button"
                android:text="@string/title_search"
                android:textColor="@color/colorWhite"
                android:textSize="16sp" />

        </LinearLayout>

        <ListView
            android:id="@+id/list_search_search"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_clear_history_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:text="@string/clear_history"
            android:textAlignment="center" />
    </LinearLayout>

</LinearLayout>