<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrea"
    tools:context=".activity.BuyerOrderActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/linearlayout_border"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/consignee_name"
                        android:textSize="16dp" />

                    <EditText
                        android:id="@+id/edit_consignee_name_buyer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/consignee_name"
                        android:textSize="18dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/consignee_phone"
                        android:textSize="16dp" />

                    <EditText
                        android:id="@+id/edit_consignee_phone_buyer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/consignee_phone"
                        android:textSize="18dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/consignee_address"
                        android:textSize="16dp" />

                    <TextView
                        android:id="@+id/txt_consignee_address_buyer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/consignee_address"
                        android:textSize="18dp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/linearlayout_border"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/img_commodity_buyer"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:src="@drawable/good1" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txt_commodity_name_buyer"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="商品名称"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="所选商品型号"
                            android:textSize="16sp"
                            android:visibility="invisible" />
                    </LinearLayout>

                </LinearLayout>
                <View
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimaryDark"/>
                <LinearLayout
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_weight="5"
                        android:text="@string/purchase_quantity"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/btn_decline_buyer"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:gravity="center"
                        android:text="-"
                        android:textColor="@color/orangered"
                        android:textSize="22sp" />

                    <TextView
                        android:id="@+id/txt_good_num_buyer"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="1"
                        android:textColor="@color/gray"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/btn_add_buyer"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:gravity="center"
                        android:text="+"
                        android:textColor="@color/orangered"
                        android:textSize="22sp" />

                </LinearLayout>
                <View
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorPrimaryDark"/>
                <LinearLayout
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="8"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/in_distribution"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/txt_in_distribution"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/free_postage"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:gravity="right|center_vertical"
        android:orientation="horizontal"
        android:visibility="visible">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textSize="18sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RMB"
            android:textColor="@color/darkorange"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txt_total_amount_buyer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/darkorange"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_submit_order_buyer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/search_button"
            android:text="@string/submit_orders"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

</RelativeLayout>